--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.4.0",
     "react-bootstrap": "^0.32.1",
     "react-calendar": "^2.15.1",
     "react-dom": "^16.4.0",
-    "react-scripts": "1.1.4"
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.4",
+    "styled-components": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
